# BCC-Computacao-Grafica

./: README.md
Curva de Bézier/: CMakeLists.txt  cubic_bezier_curve.cpp
Curva de Bézier/Dados/: matriz_polinomios.txt  pontos.txt
Perspectiva 3D/: cubo3D.py
Primitivas/: CMakeLists.txt  bresenham.cpp  dda.cpp  dda_and_rotation.cpp
Projeto/: compile.txt  glad.c
Projeto/Final/: config.h  graphical_obj_data.h  main.cpp  obj_shader.h  spline_shader.h  utils.h
Projeto/Teste 01 - Cubo no 3D/: data.h  main.cpp  shaders.h  utils.h
Projeto/Teste 02 - Curva Bézier 2D/: data.h  main.cpp  shaders.h  shaders_ref.h  utils.h
Projeto/Teste 03 - Adaptação Teste 02/: data.h  main.cpp  shaders.h  utils.h
Projeto/Teste 04 - Curva em mundo 3D/: data.h  main.cpp  shaders1.h  shaders2.h  utils.h
Splines/: matriz.h
Transformação em Imagem/: CMakeLists.txt  transformacao.cpp
